--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,15 +2,8 @@
   <div class="panel-footer">
 	<div class="container-fluid">
 	  <div class="row">
-		<div class="col-sm-4">
-			
-		  <p>&copy 2016 Allan Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
-              <p>We are part of the <a href="https://www.physics.leidenuniv.nl/">Leiden Institute of Physics</a> at <a href="https://www.leidenuniv.nl">Leiden University</a>.</p>
-            
-
-		   <p>  </p><p>
-            		  
-            
+		<div class="col-sm-4">			
+		  <p>&copy 2022 Spencer Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
 		</div>
 		<div class="col-sm-4">
 		  Funding:<br />
@@ -20,11 +13,11 @@
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-		  Oort building, Leiden University<br />
-		  Niels Bohrweg 2<br />
-		  2333 CA Leiden<br />
-		  Netherlands <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
+		  Division of Oncology, Dept. of Medicine
+		  Washington University School of Medicine
+		  425 S. Euclid Ave<br />
+		  St. Louis MO, USA
+            (<a href="https://goo.gl/maps/gZa8yKHEnxfMT3FG6">Maps</a>)
 		</div>
 	  </div>
 	</div>
