--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,13 +8,14 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Spencer Lab @ Washington University</a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Spencer Lab</a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/team">People</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/people">People</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/science">Science</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/clinical">Clinical</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Opportunities</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
