--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/science">Science</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/clinical">Clinical</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
- 		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Opportunities</a></li>
+ 		<li><a href="{{ site.url }}{{ site.baseurl }}/jobs">Opportunities</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
 	  </ul>
 	</div>
