--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,12 +13,13 @@
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/people">People</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/science">Science</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/clinical">Clinical</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/teaching">Teaching</a></li>
+ 		<li><a href="{{ site.url }}{{ site.baseurl }}/Lab">Lab</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/people">People</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/jobs">Opportunities</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
 	  </ul>
 	</div>
   </div>
