--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/science">Science</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/clinical">Clinical</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/teaching">Teaching</a></li>
- 		<li><a href="{{ site.url }}{{ site.baseurl }}/Lab">Lab</a></li>
+ 		<li><a href="{{ site.url }}{{ site.baseurl }}/lab">Lab</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/jobs">Opportunities</a></li>
 	  </ul>
