new clinical section

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@ img { margin-bottom: 24px;
 body {
     padding-top: 70px;
     background-image: url('{{ site.baseurl }}/images/background.png');
+    background-attachment: fixed;
 }
 
 figcaption {
