--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,7 +3,8 @@ layout: default
 ---
 
   <div id="homeid" class="col-sm-12">
-        <h1>Welcome to the Spencer Lab</h1>
+        <h1>The Spencer Lab at Washington University School of
+        Medicine in St. Louis</h1>
 
 	{{ content }}
   </div>
