--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,11 +13,12 @@
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-		  Division of Oncology, Dept. of Medicine
+		  314-273-0739, dspencerlab@gmail.com		  
+		  Divison of Oncology, Campus Box 8007
+		  Southwest Tower, Room 613H
 		  Washington University School of Medicine
 		  425 S. Euclid Ave<br />
-		  St. Louis MO, USA
-            (<a href="https://goo.gl/maps/gZa8yKHEnxfMT3FG6">Maps</a>)
+		  St. Louis MO, USA (<a href="https://goo.gl/maps/gZa8yKHEnxfMT3FG6">Maps</a>)
 		</div>
 	  </div>
 	</div>
