--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,10 @@
 	<div class="container-fluid">
 	  <div class="row">
 		<div class="col-sm-4">			
-		  <p>&copy 2022 Spencer Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
+		  <p>&copy 2022 Spencer Lab. Site made with <a
+  href="https://jekyllrb.com">Jekyll</a>. Thanks the <a
+  href="http://www.allanlab.org/">Allan lab</a> and <a
+  href="http://www.dantaslab.org/">Dantas lab</a> for inspiration.</p>
 		</div>
 		<div class="col-sm-4">
 		  Funding:<br />
@@ -13,12 +16,11 @@
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-		  314-273-0739, dspencerlab@gmail.com		  
-		  Divison of Oncology, Campus Box 8007
-		  Southwest Tower, Room 613H
-		  Washington University School of Medicine
-		  425 S. Euclid Ave<br />
-		  St. Louis MO, USA (<a href="https://goo.gl/maps/gZa8yKHEnxfMT3FG6">Maps</a>)
+		  314-273-0739, dspencerlab@gmail.com <br />		  
+		  Divison of Oncology, Campus Box 8007 <br />
+		  Southwest Tower, Room 613H <br />
+		  Washington University School of Medicine <br />
+		  425 S. Euclid Ave St. Louis MO, USA (<a href="https://goo.gl/maps/gZa8yKHEnxfMT3FG6">map</a>)
 		</div>
 	  </div>
 	</div>
