--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,7 @@
 		<div class="col-sm-4">			
 		  <p>&copy 2022 Spencer Lab. Site made with <a
   href="https://jekyllrb.com">Jekyll</a>. Thanks the <a
-  href="http://www.allanlab.org/">Allan lab</a> and <a
-  href="http://www.dantaslab.org/">Dantas lab</a> for inspiration.</p>
+  href="http://www.allanlab.org/">Allan lab</a> for inspiration.</p>
 		</div>
 		<div class="col-sm-4">
 		  Funding:<br />
