--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,18 @@
 <div id="footer" class="panel">
-  <div class="panel-footer">
+  <div class="panel-footer" style="font-size: 16px">
 	<div class="container-fluid">
 	  <div class="row">
 		<div class="col-sm-4">			
 		  <p>&copy 2022 Spencer Lab. Site made with <a
-  href="https://jekyllrb.com">Jekyll</a>. Thanks the <a
+  href="https://jekyllrb.com">Jekyll</a>. Thanks to the <a
   href="http://www.allanlab.org/">Allan lab</a> for inspiration.</p>
 		</div>
 		<div class="col-sm-4">
-		  Funding:<br />
-		  - Grants from the <a
-  href="https://www.cancer.gov/">NCI</a> and the <a
+		  Funding: Grants from the <a href="https://www.cancer.gov/">NCI</a> and the <a
   href='https://www.ddcf.org/grants/'>Doris Duke Charitable Foundation</a>
 		</div>
 		<div class="col-sm-4">
-		  Contact:<br />
-		  314-273-0739, dspencerlab@gmail.com <br />		  
+		  Contact: 314-273-0739, dspencerlab@gmail.com <br />		  
 		  Divison of Oncology, Campus Box 8007 <br />
 		  Southwest Tower, Room 613H <br />
 		  Washington University School of Medicine <br />
