--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/teaching">Teaching</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/lab">Lab</a></li>
 		<li><a href="https://github.com/dhslab">Code</a></li>
+   		<li><a href="{{ site.url }}{{ site.baseurl }}/lab">Links</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
  		<li><a href="{{ site.url }}{{ site.baseurl }}/jobs">Opportunities</a></li>
 	  </ul>
